--- a/EverWeb 3.4.2 Preview_files/textstyles.css
+++ b/EverWeb 3.4.2 Preview_files/textstyles.css
@@ -98,3 +98,15 @@ a.outerlink{text-decoration:none}
  word-wrap: break-word;}
 .linkStyle_33:visited{color:#000000; text-decoration:underline;}
 .linkStyle_33:hover{color:#FF2600; text-decoration:underline;}
+.Style36{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 12px; 
+ color: #FEFEFE;
+ word-wrap: break-word;}
+.linkStyle_37{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 12px; 
+ color: #0432FF;
+ text-decoration: underline; 
+ /* 0 0 0 #00F900 #0075B9 #FF2600 */
+ word-wrap: break-word;}
+.linkStyle_37:visited{color:#0075B9; text-decoration:underline;}
+.linkStyle_37:hover{color:#FF2600; text-decoration:underline;}
