--- a/EverWeb 3.4.2 Preview_files/textstyles.css
+++ b/EverWeb 3.4.2 Preview_files/textstyles.css
@@ -140,3 +140,35 @@ a.outerlink{text-decoration:none}
  margin:0;
  color: #FEFEFE;
  word-wrap: break-word;}
+.Style48{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 27px; 
+ color: #FEFEFE;
+ word-wrap: break-word;}
+.Style49{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 17px; 
+ color: #FEFEFE;
+ letter-spacing: -0.01em; 
+ word-wrap: break-word;}
+.Style50{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 17px; 
+ margin:0;
+ color: #FEFEFE;
+ letter-spacing: -0.01em; 
+ word-wrap: break-word;}
+.Style51{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 13px; 
+ color: #EC220A;
+ word-wrap: break-word;}
+.Style52{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 13px; 
+ color: #FEFEFE;
+ word-wrap: break-word;}
+.Style53{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 13px; 
+ margin:0;
+ color: #FEFEFE;
+ word-wrap: break-word;}
+.Style54{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 14px; 
+ color: #FEFEFE;
+ word-wrap: break-word;}
