--- a/index_files/textstyles.css
+++ b/index_files/textstyles.css
@@ -172,3 +172,23 @@ a.outerlink{text-decoration:none}
  font-size: 14px; 
  color: #FEFEFE;
  word-wrap: break-word;}
+.Style55{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 27px; 
+ word-wrap: break-word;}
+.Style56{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 17px; 
+ letter-spacing: -0.01em; 
+ word-wrap: break-word;}
+.Style57{font-family:  'ArialMT', 'Arial' ,sans-serif ;
+ font-size: 17px; 
+ margin:0;
+ letter-spacing: -0.01em; 
+ word-wrap: break-word;}
+.Style58{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 16px; 
+ color: #0075B9;
+ word-wrap: break-word;}
+.Style59{font-family:  'Helvetica' ,sans-serif ;
+ font-size: 15px; 
+ color: #0075B9;
+ word-wrap: break-word;}
